TestRest updated